# metapype-eml

./: .gitignore  .travis.yml  MANIFEST.in  README-raw.md  README.md  environment-min.yml  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-app.yml
docs/: eml_model.puml  metapype.xcf  mom.xml  node.puml
docs/eml_profile/: readme.md
docs/eml_profile/eml_2.1.0/: readme.md
docs/eml_profile/eml_2.1.1/: readme.md
docs/eml_profile/eml_2.2.0/: concept_xpath_freq.csv  readme.md
src/: setup.py
src/metapype/: __init__.py  changelog.md  config.py.template  setup.py
src/metapype/eml/: __init__.py  evaluate.py  evaluation_warnings.py  exceptions.py  export.py  harness.py  names.py  references.py  rule.py  rules.json  rules.py  validate.py  validation_errors.py
src/metapype/eml2_1_1/: __init__.py  evaluate.py  exceptions.py  export.py  harness.py  names.py  rule.py  rules.json  rules.py  validate.py
src/metapype/eml_2_2_0/: evaluate.py  harness.py  names.py  rule.py  rules.json  rules.py  validate.py
src/metapype/model/: __init__.py  io.py  metapype_io.py  mp_io.py  node.py  normalize.py  views.py
tests/: __init__.py  test_eml.py  test_eml_2_1_1.py  test_evaluate.py  test_io.py  test_node.py  test_node_store_scope.py  test_normalize.py  test_prune.py  test_references.py
tests/data/: eml.json  eml.xml
utils/: convert.py
