[project]
authors = [{name = "Mark Servilla", email = "mark.servilla@gmail.com"}]
requires-python = ">=3.11"
dependencies = []
name = "metapype"
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "hatchling",
]

[tool.pixi.workspace]
name = "metapype"
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64"]
preview = ["pixi-build"]

[tool.pixi.pypi-dependencies]
metapype = { path = ".", editable = true }

[tool.pixi.dependencies]
rfc3986 = ">=2.0.0,<3"
daiquiri = ">=3.0.0,<4"
pytest = ">=9.0.2,<10"
lxml = ">=6.0.2,<7"
click = ">=8.3.1,<9"
pip = ">=25.3,<26"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/metapype/VERSION.txt"
pattern = "(?P<version>\\d+\\.\\d+\\.\\d+)"

[tool.hatch.build.targets.wheel]
packages = ["src/metapype"]

[tool.hatch.build.targets.sdist]
only-include = ["src/metapype"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
]
