[metadata]
name = metapype
version = file: src/metapype/VERSION.txt
author = Environmental Data Initiative
author_email = support@environmentaldatainitiative.org
description = Metapype: science metadata manipulation library
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
url = https://github.com/PASTAplus/metapype-eml
project_urls =
    Bug Tracker = https://github.com/PASTAplus/metapype-eml/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires =  >=3.8
install_requires =
    click==8.0.1
    daiquiri==3.0.0
    lxml==4.6.3
    rfc3986==1.5.0

[options.packages.find]
where = src
include = metapype, metapype.eml, metapype.model
